# Contracing

./: .gitignore  CMakeLists.txt  README.md  conf_doxygen  prj.conf
boards/: nrf52833dk_nrf52833.conf  nrf52833dk_nrf52833.overlay
src/: main.c
src/ble/: advertise.c  advertise.h  ble.c  ble.h  connection.c  connection.h  scan.c  scan.h  uuid.h
src/ble/services/bs/: bas.c  bas.h
src/ble/services/dis/: dis.c  dis.h
src/ble/services/dts/: dts.c  dts.h
src/ble/services/wens/: wens.c  wens.h
src/gaens/: crypto.c  crypto.h  gaens.c  gaens.h  gaens_test.c  gaens_test.h
src/records/: extmem.c  extmem.h  storage.c  storage.h
src/time/: time.c  time.h
